<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tipoLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/t_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_nombre" />

        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName"
            android:text="@string/nombre" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/t_tipo"
                android:layout_width="11dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/t_tipo" />

            <Spinner
                android:id="@+id/tipo"
                android:layout_height="wrap_content"
                android:layout_weight="60" />
        </LinearLayout>

        <TextView
            android:id="@+id/t_direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/t_direccion" />

        <EditText
            android:id="@+id/direccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/direccion"
            android:inputType="textPersonName"
            android:text="@string/direccion" />

        <LinearLayout
            android:id="@+id/telefonoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/t_telefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/t_telefono" />

            <EditText
                android:id="@+id/telefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="60"
                android:ems="10"
                android:hint="@string/telefono"
                android:inputType="phone"
                android:text="@string/telefono" />
        </LinearLayout>

        <TextView
            android:id="@+id/t_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_url" />

        <EditText
            android:id="@+id/url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/url"
            android:inputType="textPersonName"
            android:text="@string/url" />

        <TextView
            android:id="@+id/t_comentario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_comentario" />

        <EditText
            android:id="@+id/comentario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/comentario"
            android:inputType="textPersonName"
            android:text="@string/comentario" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>